UtahLiveDataTest/src/objects/USBEForm__c.object
<CustomObject>
    <description>This object is basically the main form object to be used to build the USBE forms</description>
    <fields>
        <fullName>Acknowledge__c</fullName>
        <label>Acknowledge</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ApplicationDetail__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Application Detail (FORMS)</label>
        <referenceTo>Form__c</referenceTo>
        <relationshipLabel>USBEForms</relationshipLabel>
        <relationshipName>USBEForms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Application__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Application</label>
        <referenceTo>Application__c</referenceTo>
        <relationshipLabel>USBEForms</relationshipLabel>
        <relationshipName>USBEForms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CFTGAcademicOutc__c</fullName>
        <label>CFTGAcademicOutc</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CFTGNumberOfStudent__c</fullName>
        <label>CFTGNumberOfStudent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CFTGStudentGrade__c</fullName>
        <label>CFTGStudentGrade</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CFTGTeacherEmailAddress__c</fullName>
        <label>CFTGTeacherEmailAddress</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>CFTGTeacherName__c</fullName>
        <label>CFTGTeacherName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CFTGTeacherPhoneNumber__c</fullName>
        <label>CFTGTeacherPhoneNumber</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CFTGVisitDate__c</fullName>
        <label>CFTGVisitDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CFTGYesNo__c</fullName>
        <label>CFTGYesNo</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ConfigForm__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Config: Form</label>
        <referenceTo>GNT__PageTemplate__c</referenceTo>
        <relationshipLabel>USBEForms</relationshipLabel>
        <relationshipName>USBEForms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>USBEForms</relationshipLabel>
        <relationshipName>USBEForms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FormsValidated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Forms Validated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Grant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Grant</label>
        <referenceTo>Grant__c</referenceTo>
        <relationshipLabel>USBEForms</relationshipLabel>
        <relationshipName>USBEForms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>InternalUniqueID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Uniquely identifies each record for data migration purpose only. It is auto populated by trigger in before insert context.</description>
        <externalId>true</externalId>
        <label>Internal Unique ID</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>LEAAccouuntId__c</fullName>
        <formula>LEAPrivateSchool__r.LEA__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LEAAccouuntId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LEAAddSchool__c</fullName>
        <label>LEAAddSchool</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LEAPrivateSchool__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>LEA Private School</label>
        <referenceTo>LEAPrivateSchool__c</referenceTo>
        <relationshipLabel>USBEForms</relationshipLabel>
        <relationshipName>USBEForms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LEAPublicSchool__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>LEA Public School</label>
        <referenceTo>LEAPublicSchools__c</referenceTo>
        <relationshipLabel>USBEForms</relationshipLabel>
        <relationshipName>USBEForms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MOELookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>MOE</label>
        <referenceTo>MOE__c</referenceTo>
        <relationshipLabel>USBEForms</relationshipLabel>
        <relationshipName>USBEForms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NegotiationRequest__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Negotiation Request</label>
        <referenceTo>ChangeRequest__c</referenceTo>
        <relationshipLabel>USBEForms</relationshipLabel>
        <relationshipName>USBEForms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PreApplication__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Pre-Application</label>
        <referenceTo>PreApplication__c</referenceTo>
        <relationshipLabel>USBEForms</relationshipLabel>
        <relationshipName>USBEForms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PrivateSchoolHiddenFlag__c</fullName>
        <description>Used to flag completion status on LEA private school form</description>
        <label>PrivateSchoolHiddenFlag</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PrivateSchoolNA__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, private school data is not applicable for this organization</description>
        <label>PrivateSchoolNA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Title_IIA_Agreement__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Title IIA Agreement</label>
        <type>Checkbox</type>
    </fields>
    <label>USBEForm</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>USBEForm Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>USBEForms</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>